# eventlircd

./: .gitignore  DEVELOP.md  Makefile.am  README.md  configure.ac
etc/: 03_0766_0204.keymap  Makefile.am  default.evmap  mcekbd.keymap
man/: eventlircd.evmap.5.in  eventlircd.keymap.5.in
src/: event_name_to_code.h.sh.in  evkey_code_to_name.h.sh.in  evkey_name_to_code.h.sh.in  evkey_type.h.sh.in  input.c  lircd.c  main.c  monitor.c  monitor.h
tools/: Makefile.am  irw.c
trunk/: README  configure.ac
trunk/etc/: 03_0419_0001.keymap  03_05a4_9881.keymap  03_147a_e02d.evmap  Makefile.am
trunk/m4/: ax_cflags_gcc_option.m4  pkg.m4
trunk/man/: Makefile.am  eventlircd.8.in  eventlircd.evmap.5.in  eventlircd.keymap.5.in
trunk/src/: Makefile.am  event_name_to_code.h.sh.in  evkey_code_to_name.h.sh.in  evkey_name_to_code.h.sh.in  evkey_type.h.sh.in  input.c  input.h  lircd.c  lircd.h  main.c  monitor.c  monitor.h
trunk/udev/: lircd_helper.in
trunk/udev/rules.d/: 98-eventlircd.rules.disabled.in
udev/: lircd_helper.in  wakeup_enable.in
udev/rules.d/: 98-eventlircd.rules.disabled.in  98-lircd.rules.disabled.in
